// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test LeftPanelButton should render correctly 1`] = `
<div>
  <div
    class="container"
    id="test"
    title="test"
  >
    <span
      class="ant-badge badge css-dev-only-do-not-override-hash"
    >
      <div>
        test
      </div>
    </span>
  </div>
</div>
`;

exports[`test LeftPanelButton should render flux plus icon correctly 1`] = `
<div>
  <div
    class="container"
    id="test"
    title="test"
  >
    <span
      class="ant-badge badge css-dev-only-do-not-override-hash"
    >
      <div>
        test
      </div>
      <svgr-url
        classname="ant-scroll-number-custom-component flux-plus"
        style="margin-top: 6px; right: 4px;"
      />
    </span>
  </div>
</div>
`;
